<resources>
    <string name="app_name">Form App</string>
    <string name="enter_details">Enter details</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="others">Others</string>
</resources>
