<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/userDetails"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="114dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:text="@string/enter_details"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="Name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="200dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="250dp"
        android:autofillHints="Mobile Number"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="310dp"

        android:text="@string/gender"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:typeface="sans" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="340dp">

        <RadioButton
            android:id="@+id/maleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/femaleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/othersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="450dp"
        android:autofillHints="@string/address"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="120dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="173dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="540dp"
        android:text="@string/submit" />
</RelativeLayout>